--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "morgan": "^1.10.0",
+    "multer": "^2.0.1",
     "mysql": "^2.18.1",
     "prisma": "^6.9.0"
   },
