--- a/party/package.json
+++ b/party/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@fontsource/roboto": "5.2.5",
     "@mdi/font": "7.4.47",
+    "axios": "^1.10.0",
     "vue": "^3.5.13",
+    "vue3-virtual-scroller": "^0.2.3",
     "vuetify": "^3.8.1"
   },
   "devDependencies": {
